--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.cameratest">
+    package="com.example.nkirukaApp">
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -15,12 +15,12 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".cameramenu"
-            android:parentActivityName="com.example.cameratest.MainActivity">
+            android:name="com.example.nkirukaApp.camera.CameraMenuActivity"
+            android:parentActivityName="com.example.nkirukaApp.MainActivity">
         </activity>
 
         <activity
-            android:name=".MainActivity" >
+            android:name="com.example.nkirukaApp.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
